# High-Level-Computer-Vision-Project

./: .gitignore  LVLM_llava-llama3_8b.ipynb  OCR_Donut.ipynb  OCR_Tesseract.ipynb  OCR_VRDU_QA.ipynb  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
NewDataset/: metadata.json
docvqa_samples_300/: metadata.json
results/: Donut_finetuned_results.csv  OCR_VRDU_results.csv  OCR_tesseract_results.csv  vlm_results.csv
results_NEWDATA/: OCR_DONUT_RESULTS_NEWDATASET.csv  OCR_VRDU_RESULTS_NEWDATASET.csv  OCR_results_tesseract_NEWDATASET.csv  vlm_results_NEWDATASET.csv
